--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -22,7 +22,7 @@
     "log-update": "^7.0.1",
     "ora": "^9.0.0",
     "pino": "catalog:",
-    "pino-pretty": "^13.1.2",
+    "pino-pretty": "catalog:",
     "pkg-types": "^2.3.0",
     "remeda": "^2.32.0",
     "untun": "^0.1.3",
