--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "zod": "^4.1.12",
     "grammy": "^1.38.3",
     "pino": "^10.1.0",
+    "pino-pretty": "^13.1.2",
     "@typescript/native-preview": "^7.0.0-dev.20250920.1"
   },
   "devDependencies": {
     "@types/bun": "^1.3.2",
     "@types/node": "^24.9.1",
-    "nx": "^22.1.0"
+    "nx": "^22.1.0",
+    "pino-pretty": "catalog:"
   },
   "peerDependencies": {
     "typescript": "^5.9.3"
