--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -6,6 +6,7 @@
     "@contracts/alpha.v1": "workspace:*",
     "@contracts/secret.v1": "workspace:*",
     "@contracts/user-manager.v1": "workspace:*",
+    "@google/genai": "^1.30.0",
     "@inquirer/prompts": "^7.10.0",
     "@napi-rs/keyring": "^1.2.0",
     "@reside/shared": "workspace:*",
@@ -17,6 +18,7 @@
     "cojson": "catalog:",
     "cojson-transport-ws": "catalog:",
     "consola": "^3.4.2",
+    "dotenv": "^17.2.3",
     "get-port-please": "^3.2.0",
     "jazz-tools": "catalog:",
     "log-update": "^7.0.1",
