--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "grammy": "^1.38.3",
     "pino": "^10.1.0",
     "pino-pretty": "^13.1.2",
-    "@typescript/native-preview": "^7.0.0-dev.20250920.1"
+    "@typescript/native-preview": "^7.0.0-dev.20250920.1",
+    "@google/genai": "^1.30.0"
   },
   "devDependencies": {
     "@types/bun": "^1.3.2",
