--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "pino": "^10.1.0",
     "pino-pretty": "^13.1.2",
     "@typescript/native-preview": "^7.0.0-dev.20250920.1",
-    "@google/genai": "^1.30.0"
+    "@google/genai": "^1.30.0",
+    "type-fest": "^5.2.0"
   },
   "devDependencies": {
     "@types/bun": "^1.3.2",
