fix streamer replica

--- a/apps/statusboard/package.json
+++ b/apps/statusboard/package.json
@@ -10,21 +10,22 @@
   },
   "dependencies": {
     "@contracts/alpha.v1": "workspace:^",
-    "@dagrejs/dagre": "^2.0.0",
     "@excalidraw/excalidraw": "^0.18.0",
     "@reside/shared": "workspace:^",
     "cojson": "catalog:",
     "cojson-transport-ws": "catalog:",
+    "dagre": "^0.8.5",
     "jazz-tools": "catalog:",
-    "remeda": "catalog:",
     "nanoid": "^5.1.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "remeda": "catalog:",
     "type-fest": "catalog:",
     "vite-plugin-node-polyfills": "^0.24.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@types/dagre": "^0.7.53",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
