--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "type-fest": "^5.2.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.3.8",
     "@types/bun": "^1.3.2",
     "@types/node": "^24.9.1",
     "nx": "^22.1.0",
